--- a/src/Compotents/Card/Card.module.css
+++ b/src/Compotents/Card/Card.module.css
@@ -48,7 +48,8 @@
     border-radius: 4px; /* Закруглені кути кнопки */
     padding: 10px 20px; /* Відступи від тексту до границі кнопки */
     font-size: 16px; /* Розмір тексту кнопки */
-    cursor: pointer; /* Зміна вигляду курсору при наведенні на кнопку */
+    cursor: pointer;
+    margin-left: 15px; /* Зміна вигляду курсору при наведенні на кнопку */
   }
   
   
